centre alignment css fix

--- a/new-site/src/app/homepage/skills/skills.component.css
+++ b/new-site/src/app/homepage/skills/skills.component.css
@@ -6,8 +6,7 @@
     justify-content: center;
     font-size: 2.5rem;
     font-weight: bold;
-    margin-left: 0px;
-    padding-left: 0px;
+    
 }
 
 #custom-headings{
